# My-Minimind

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
backends/mlx/: model.py
backends/torch/: model.py
benchmark/: compare_backends.py
model/: __init__.py  config.py  model.py
