[project]
name = "my-minimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
preview = true
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
