[project]
name = "my-minimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rich>=15.0.0",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]

[tool.ruff]
preview = true
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
